# taggsystem

./: .gitignore  CMakeLists.txt  README.md  platformio.ini
sim/: CMakeLists.txt  sim.cpp  sim.html
sim/include/: Arduino.h  MFRC522.h
src/: archive.cpp  archive.h  cardreader.cpp  cardreader.h  led.cpp  led.h  main.cpp  print.h  state.cpp  state.h  uidt.h  users.cpp  users.h
taggsystem/: cardreader.cpp  cardreader.h  taggsystem.ino  users.cpp  users.h
test/: CMakeLists.txt  state_test.cpp  testclasses.cpp  user_test.cpp
